[gd_scene load_steps=6 format=3 uid="uid://b3sxdbkx626f"]

[ext_resource type="Texture2D" uid="uid://3gt3vmgyd8lj" path="res://spider.png" id="1_5t868"]
[ext_resource type="Script" path="res://Spider.gd" id="1_ero73"]

[sub_resource type="SpriteFrames" id="SpriteFrames_iwcrh"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_5t868")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_rhux6"]
radius = 86.3713

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qnxn2"]
size = Vector2(20.3125, 25)

[node name="Spider" type="CharacterBody2D"]
scale = Vector2(2, 2)
collision_layer = 2
collision_mask = 3
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_ero73")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_iwcrh")

[node name="Detecter" type="Area2D" parent="."]
position = Vector2(-1.19209e-07, 0)
collision_layer = 2
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detecter"]
shape = SubResource("CircleShape2D_rhux6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1.5, 3.5)
scale = Vector2(1.92, 1)
shape = SubResource("RectangleShape2D_qnxn2")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
debug_enabled = true

[node name="MakePath" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[connection signal="body_entered" from="Detecter" to="." method="_on_detecter_body_entered"]
[connection signal="body_exited" from="Detecter" to="." method="_on_detecter_body_exited"]
[connection signal="timeout" from="MakePath" to="." method="_on_make_path_timeout"]
